# booli-crawler

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: actions.yml
booli_crawler/: crawler.py  page_queue.py  parser.py  sold_listing_list.py  sold_listings.py  types.py  url.py  utils.py
examples/: sold_listings.py
tests/: common.py  mock_response.py  test_parser.py  test_parsers.py  test_sold_listings.py  test_url.py  test_utils.py
tests/resources/: booli_slutpriser_linkoping.html
